--- a/css/main 1/styles.css
+++ b/css/main 1/styles.css
@@ -74,7 +74,7 @@ section {
 .slideshow-container {
     position: relative;
     max-width: 95%; /* 95% da largura da página */
-    margin: 0 auto 40px; /* Centraliza o container */
+    margin: 0 auto 20px; /* Centraliza o container */
     overflow: hidden;
     aspect-ratio: 4 / 3;
     background: #00000000; /* Fundo transparente */
@@ -98,33 +98,17 @@ section {
 
 /* Imagens no slide */
 .slide img {
-    width: 100%; /* Imagem ocupa 100% do container */
+    width:auto;
     height: 100%;
     object-fit: cover;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
-/* Botões de navegação */
-.prev, .next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.69);
-    color: white;
-    border: none;
-    padding: 15px;
-    cursor: pointer;
-    border-radius: 8px;
-    z-index: 10;
-}
 
-.prev {
-    left: 10px;
-}
-
-.next {
-    right: 10px;
+.justify {
+    text-align: justify;
+    margin: 0 5%;
 }
 
 .prev:hover, .next:hover {
@@ -135,7 +119,6 @@ section {
 .progress-bar {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
 }
 
 .heart {
@@ -151,7 +134,7 @@ section {
 
 /* Estilos do Contador */
 .elapsed-time-container {
-    margin-top: 40px;
+    margin-top: 20px;
     margin-bottom: 40px;
 }
 
@@ -163,24 +146,24 @@ section {
     margin-top: 20px;
 }
 
+.time {
+    font-size: 3rem;
+}
+
 .time-box {
     background: #444;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-    width: 120px; /* Largura fixa para garantir consistência */
+    padding: 50px 0;
+    width: 400px; /* Largura fixa para garantir consistência */
 }
 
-.time-box span {
-    font-size: 2.5em;
-    font-weight: bold;
-    display: block;
-}
 
 .time-box p {
     margin: 0;
-    font-size: 1em;
+    font-size: 1.1em;
     color: #ccc;
 }
 
@@ -190,12 +173,18 @@ section {
         font-size: 1.5em;
     }
 
-    .time-box span {
-        font-size: 2em;
+    .time {
+        font-size: 3rem;
     }
 
-    .prev, .next {
-        padding: 8px;
+    .time-box {
+        width: 210px;
+        padding: 25px;
+    }
+
+    .justify {
+        text-align: justify;
+        margin: 0 5%;
     }
 }
 
@@ -219,14 +208,11 @@ section {
 
     .time-box {
         padding: 15px;
-        width: 115px;
+        width: 117px;
     }
 
     .time-box span {
         font-size: 1.8em;
     }
 
-    .prev, .next {
-        padding: 6px;
-    }
 }
